src/test/deca/context/invalid/object/class_impossible_cast_float_into_int.deca
//  Description : 
// 
//      Test incorrect qui utilise une classe avec une méthode qui cast un float en un int
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03


class A {
    float x = 3.5;
    int castInt(){
        int y = x;
        return y;
    }
}

{
    A oA = new A();
    print(oA.castInt());
}